# auth/api/v1/auth.pb.go
@@ -77,7 +77,7 @@ func (x *ForgetPasswordRequest) GetPhone() string {
 	return ""
 }
 
-type ResentRegisterRequest struct {
+type ResendRegisterRequest struct {
 	state         protoimpl.MessageState
 	sizeCache     protoimpl.SizeCache
 	unknownFields protoimpl.UnknownFields
@@ -86,8 +86,8 @@ type ResentRegisterRequest struct {
 	Phone string `protobuf:"bytes,2,opt,name=phone,proto3" json:"phone,omitempty"`
 }
 
-func (x *ResentRegisterRequest) Reset() {
-	*x = ResentRegisterRequest{}
+func (x *ResendRegisterRequest) Reset() {
+	*x = ResendRegisterRequest{}
 	if protoimpl.UnsafeEnabled {
 		mi := &file_auth_api_v1_auth_proto_msgTypes[1]
 		ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
@@ -95,13 +95,13 @@ func (x *ResentRegisterRequest) Reset() {
 	}
 }
 
-func (x *ResentRegisterRequest) String() string {
+func (x *ResendRegisterRequest) String() string {
 	return protoimpl.X.MessageStringOf(x)
 }
 
-func (*ResentRegisterRequest) ProtoMessage() {}
+func (*ResendRegisterRequest) ProtoMessage() {}
 
-func (x *ResentRegisterRequest) ProtoReflect() protoreflect.Message {
+func (x *ResendRegisterRequest) ProtoReflect() protoreflect.Message {
 	mi := &file_auth_api_v1_auth_proto_msgTypes[1]
 	if protoimpl.UnsafeEnabled && x != nil {
 		ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
@@ -113,19 +113,19 @@ func (x *ResentRegisterRequest) ProtoReflect() protoreflect.Message {
 	return mi.MessageOf(x)
 }
 
-// Deprecated: Use ResentRegisterRequest.ProtoReflect.Descriptor instead.
-func (*ResentRegisterRequest) Descriptor() ([]byte, []int) {
+// Deprecated: Use ResendRegisterRequest.ProtoReflect.Descriptor instead.
+func (*ResendRegisterRequest) Descriptor() ([]byte, []int) {
 	return file_auth_api_v1_auth_proto_rawDescGZIP(), []int{1}
 }
 
-func (x *ResentRegisterRequest) GetEmail() string {
+func (x *ResendRegisterRequest) GetEmail() string {
 	if x != nil {
 		return x.Email
 	}
 	return ""
 }
 
-func (x *ResentRegisterRequest) GetPhone() string {
+func (x *ResendRegisterRequest) GetPhone() string {
 	if x != nil {
 		return x.Phone
 	}
@@ -601,7 +601,7 @@ var file_auth_api_v1_auth_proto_rawDesc = []byte{
 	0x12, 0x14, 0x0a, 0x05, 0x65, 0x6d, 0x61, 0x69, 0x6c, 0x18, 0x01, 0x20, 0x01, 0x28, 0x09, 0x52,
 	0x05, 0x65, 0x6d, 0x61, 0x69, 0x6c, 0x12, 0x14, 0x0a, 0x05, 0x70, 0x68, 0x6f, 0x6e, 0x65, 0x18,
 	0x02, 0x20, 0x01, 0x28, 0x09, 0x52, 0x05, 0x70, 0x68, 0x6f, 0x6e, 0x65, 0x22, 0x43, 0x0a, 0x15,
-	0x52, 0x65, 0x73, 0x65, 0x6e, 0x74, 0x52, 0x65, 0x67, 0x69, 0x73, 0x74, 0x65, 0x72, 0x52, 0x65,
+	0x52, 0x65, 0x73, 0x65, 0x6e, 0x64, 0x52, 0x65, 0x67, 0x69, 0x73, 0x74, 0x65, 0x72, 0x52, 0x65,
 	0x71, 0x75, 0x65, 0x73, 0x74, 0x12, 0x14, 0x0a, 0x05, 0x65, 0x6d, 0x61, 0x69, 0x6c, 0x18, 0x01,
 	0x20, 0x01, 0x28, 0x09, 0x52, 0x05, 0x65, 0x6d, 0x61, 0x69, 0x6c, 0x12, 0x14, 0x0a, 0x05, 0x70,
 	0x68, 0x6f, 0x6e, 0x65, 0x18, 0x02, 0x20, 0x01, 0x28, 0x09, 0x52, 0x05, 0x70, 0x68, 0x6f, 0x6e,
@@ -675,12 +675,12 @@ var file_auth_api_v1_auth_proto_rawDesc = []byte{
 	0x6e, 0x52, 0x65, 0x70, 0x6c, 0x79, 0x22, 0x1f, 0x82, 0xd3, 0xe4, 0x93, 0x02, 0x19, 0x22, 0x14,
 	0x2f, 0x61, 0x75, 0x74, 0x68, 0x2f, 0x72, 0x65, 0x73, 0x65, 0x74, 0x5f, 0x70, 0x61, 0x73, 0x73,
 	0x77, 0x6f, 0x72, 0x64, 0x3a, 0x01, 0x2a, 0x12, 0x66, 0x0a, 0x0e, 0x52, 0x65, 0x73, 0x65, 0x6e,
-	0x74, 0x52, 0x65, 0x67, 0x69, 0x73, 0x74, 0x65, 0x72, 0x12, 0x1d, 0x2e, 0x61, 0x70, 0x69, 0x2e,
-	0x76, 0x31, 0x2e, 0x52, 0x65, 0x73, 0x65, 0x6e, 0x74, 0x52, 0x65, 0x67, 0x69, 0x73, 0x74, 0x65,
+	0x64, 0x52, 0x65, 0x67, 0x69, 0x73, 0x74, 0x65, 0x72, 0x12, 0x1d, 0x2e, 0x61, 0x70, 0x69, 0x2e,
+	0x76, 0x31, 0x2e, 0x52, 0x65, 0x73, 0x65, 0x6e, 0x64, 0x52, 0x65, 0x67, 0x69, 0x73, 0x74, 0x65,
 	0x72, 0x52, 0x65, 0x71, 0x75, 0x65, 0x73, 0x74, 0x1a, 0x13, 0x2e, 0x61, 0x70, 0x69, 0x2e, 0x76,
 	0x31, 0x2e, 0x43, 0x6f, 0x6d, 0x6d, 0x6f, 0x6e, 0x52, 0x65, 0x70, 0x6c, 0x79, 0x22, 0x20, 0x82,
 	0xd3, 0xe4, 0x93, 0x02, 0x1a, 0x22, 0x15, 0x2f, 0x61, 0x75, 0x74, 0x68, 0x2f, 0x72, 0x65, 0x73,
-	0x65, 0x6e, 0x74, 0x5f, 0x72, 0x65, 0x67, 0x69, 0x73, 0x74, 0x65, 0x72, 0x3a, 0x01, 0x2a, 0x42,
+	0x65, 0x6e, 0x64, 0x5f, 0x72, 0x65, 0x67, 0x69, 0x73, 0x74, 0x65, 0x72, 0x3a, 0x01, 0x2a, 0x42,
 	0x34, 0x0a, 0x06, 0x61, 0x70, 0x69, 0x2e, 0x76, 0x31, 0x50, 0x01, 0x5a, 0x28, 0x67, 0x69, 0x74,
 	0x68, 0x75, 0x62, 0x2e, 0x63, 0x6f, 0x6d, 0x2f, 0x64, 0x61, 0x74, 0x61, 0x62, 0x6f, 0x6e, 0x66,
 	0x69, 0x72, 0x65, 0x2f, 0x62, 0x6f, 0x6e, 0x66, 0x69, 0x72, 0x65, 0x2f, 0x61, 0x70, 0x69, 0x2f,
@@ -702,7 +702,7 @@ func file_auth_api_v1_auth_proto_rawDescGZIP() []byte {
 var file_auth_api_v1_auth_proto_msgTypes = make([]protoimpl.MessageInfo, 9)
 var file_auth_api_v1_auth_proto_goTypes = []interface{}{
 	(*ForgetPasswordRequest)(nil), // 0: api.v1.ForgetPasswordRequest
-	(*ResentRegisterRequest)(nil), // 1: api.v1.ResentRegisterRequest
+	(*ResendRegisterRequest)(nil), // 1: api.v1.ResendRegisterRequest
 	(*ResetPasswordRequest)(nil),  // 2: api.v1.ResetPasswordRequest
 	(*CommonReply)(nil),           // 3: api.v1.CommonReply
 	(*RegisterRequest)(nil),       // 4: api.v1.RegisterRequest
@@ -717,12 +717,12 @@ var file_auth_api_v1_auth_proto_depIdxs = []int32{
 	6, // 2: api.v1.Auth.Login:input_type -> api.v1.LoginRequest
 	0, // 3: api.v1.Auth.ForgetPassword:input_type -> api.v1.ForgetPasswordRequest
 	2, // 4: api.v1.Auth.ResetPassword:input_type -> api.v1.ResetPasswordRequest
-	1, // 5: api.v1.Auth.ResentRegister:input_type -> api.v1.ResentRegisterRequest
+	1, // 5: api.v1.Auth.ResendRegister:input_type -> api.v1.ResendRegisterRequest
 	5, // 6: api.v1.Auth.Register:output_type -> api.v1.RegisterReply
 	7, // 7: api.v1.Auth.Login:output_type -> api.v1.LoginReply
 	3, // 8: api.v1.Auth.ForgetPassword:output_type -> api.v1.CommonReply
 	3, // 9: api.v1.Auth.ResetPassword:output_type -> api.v1.CommonReply
-	3, // 10: api.v1.Auth.ResentRegister:output_type -> api.v1.CommonReply
+	3, // 10: api.v1.Auth.ResendRegister:output_type -> api.v1.CommonReply
 	6, // [6:11] is the sub-list for method output_type
 	1, // [1:6] is the sub-list for method input_type
 	1, // [1:1] is the sub-list for extension type_name
@@ -749,7 +749,7 @@ func file_auth_api_v1_auth_proto_init() {
 			}
 		}
 		file_auth_api_v1_auth_proto_msgTypes[1].Exporter = func(v interface{}, i int) interface{} {
-			switch v := v.(*ResentRegisterRequest); i {
+			switch v := v.(*ResendRegisterRequest); i {
 			case 0:
 				return &v.state
 			case 1:
