# auth/api/v1/auth.pb.validate.go
@@ -141,22 +141,22 @@ var _ interface {
 	ErrorName() string
 } = ForgetPasswordRequestValidationError{}
 
-// Validate checks the field values on ResentRegisterRequest with the rules
+// Validate checks the field values on ResendRegisterRequest with the rules
 // defined in the proto definition for this message. If any rules are
 // violated, the first error encountered is returned, or nil if there are no violations.
-func (m *ResentRegisterRequest) Validate() error {
+func (m *ResendRegisterRequest) Validate() error {
 	return m.validate(false)
 }
 
-// ValidateAll checks the field values on ResentRegisterRequest with the rules
+// ValidateAll checks the field values on ResendRegisterRequest with the rules
 // defined in the proto definition for this message. If any rules are
 // violated, the result is a list of violation errors wrapped in
-// ResentRegisterRequestMultiError, or nil if none found.
-func (m *ResentRegisterRequest) ValidateAll() error {
+// ResendRegisterRequestMultiError, or nil if none found.
+func (m *ResendRegisterRequest) ValidateAll() error {
 	return m.validate(true)
 }
 
-func (m *ResentRegisterRequest) validate(all bool) error {
+func (m *ResendRegisterRequest) validate(all bool) error {
 	if m == nil {
 		return nil
 	}
@@ -168,19 +168,19 @@ func (m *ResentRegisterRequest) validate(all bool) error {
 	// no validation rules for Phone
 
 	if len(errors) > 0 {
-		return ResentRegisterRequestMultiError(errors)
+		return ResendRegisterRequestMultiError(errors)
 	}
 
 	return nil
 }
 
-// ResentRegisterRequestMultiError is an error wrapping multiple validation
-// errors returned by ResentRegisterRequest.ValidateAll() if the designated
+// ResendRegisterRequestMultiError is an error wrapping multiple validation
+// errors returned by ResendRegisterRequest.ValidateAll() if the designated
 // constraints aren't met.
-type ResentRegisterRequestMultiError []error
+type ResendRegisterRequestMultiError []error
 
 // Error returns a concatenation of all the error messages it wraps.
-func (m ResentRegisterRequestMultiError) Error() string {
+func (m ResendRegisterRequestMultiError) Error() string {
 	var msgs []string
 	for _, err := range m {
 		msgs = append(msgs, err.Error())
@@ -189,11 +189,11 @@ func (m ResentRegisterRequestMultiError) Error() string {
 }
 
 // AllErrors returns a list of validation violation errors.
-func (m ResentRegisterRequestMultiError) AllErrors() []error { return m }
+func (m ResendRegisterRequestMultiError) AllErrors() []error { return m }
 
-// ResentRegisterRequestValidationError is the validation error returned by
-// ResentRegisterRequest.Validate if the designated constraints aren't met.
-type ResentRegisterRequestValidationError struct {
+// ResendRegisterRequestValidationError is the validation error returned by
+// ResendRegisterRequest.Validate if the designated constraints aren't met.
+type ResendRegisterRequestValidationError struct {
 	field  string
 	reason string
 	cause  error
@@ -201,24 +201,24 @@ type ResentRegisterRequestValidationError struct {
 }
 
 // Field function returns field value.
-func (e ResentRegisterRequestValidationError) Field() string { return e.field }
+func (e ResendRegisterRequestValidationError) Field() string { return e.field }
 
 // Reason function returns reason value.
-func (e ResentRegisterRequestValidationError) Reason() string { return e.reason }
+func (e ResendRegisterRequestValidationError) Reason() string { return e.reason }
 
 // Cause function returns cause value.
-func (e ResentRegisterRequestValidationError) Cause() error { return e.cause }
+func (e ResendRegisterRequestValidationError) Cause() error { return e.cause }
 
 // Key function returns key value.
-func (e ResentRegisterRequestValidationError) Key() bool { return e.key }
+func (e ResendRegisterRequestValidationError) Key() bool { return e.key }
 
 // ErrorName returns error name.
-func (e ResentRegisterRequestValidationError) ErrorName() string {
-	return "ResentRegisterRequestValidationError"
+func (e ResendRegisterRequestValidationError) ErrorName() string {
+	return "ResendRegisterRequestValidationError"
 }
 
 // Error satisfies the builtin error interface
-func (e ResentRegisterRequestValidationError) Error() string {
+func (e ResendRegisterRequestValidationError) Error() string {
 	cause := ""
 	if e.cause != nil {
 		cause = fmt.Sprintf(" | caused by: %v", e.cause)
@@ -230,14 +230,14 @@ func (e ResentRegisterRequestValidationError) Error() string {
 	}
 
 	return fmt.Sprintf(
-		"invalid %sResentRegisterRequest.%s: %s%s",
+		"invalid %sResendRegisterRequest.%s: %s%s",
 		key,
 		e.field,
 		e.reason,
 		cause)
 }
 
-var _ error = ResentRegisterRequestValidationError{}
+var _ error = ResendRegisterRequestValidationError{}
 
 var _ interface {
 	Field() string
@@ -245,7 +245,7 @@ var _ interface {
 	Key() bool
 	Cause() error
 	ErrorName() string
-} = ResentRegisterRequestValidationError{}
+} = ResendRegisterRequestValidationError{}
 
 // Validate checks the field values on ResetPasswordRequest with the rules
 // defined in the proto definition for this message. If any rules are
