# auth/api/v1/auth_grpc.pb.go
@@ -23,7 +23,7 @@ const (
 	Auth_Login_FullMethodName          = "/api.v1.Auth/Login"
 	Auth_ForgetPassword_FullMethodName = "/api.v1.Auth/ForgetPassword"
 	Auth_ResetPassword_FullMethodName  = "/api.v1.Auth/ResetPassword"
-	Auth_ResentRegister_FullMethodName = "/api.v1.Auth/ResentRegister"
+	Auth_ResendRegister_FullMethodName = "/api.v1.Auth/ResendRegister"
 )
 
 // AuthClient is the client API for Auth service.
@@ -34,7 +34,7 @@ type AuthClient interface {
 	Login(ctx context.Context, in *LoginRequest, opts ...grpc.CallOption) (*LoginReply, error)
 	ForgetPassword(ctx context.Context, in *ForgetPasswordRequest, opts ...grpc.CallOption) (*CommonReply, error)
 	ResetPassword(ctx context.Context, in *ResetPasswordRequest, opts ...grpc.CallOption) (*CommonReply, error)
-	ResentRegister(ctx context.Context, in *ResentRegisterRequest, opts ...grpc.CallOption) (*CommonReply, error)
+	ResendRegister(ctx context.Context, in *ResendRegisterRequest, opts ...grpc.CallOption) (*CommonReply, error)
 }
 
 type authClient struct {
@@ -81,9 +81,9 @@ func (c *authClient) ResetPassword(ctx context.Context, in *ResetPasswordRequest
 	return out, nil
 }
 
-func (c *authClient) ResentRegister(ctx context.Context, in *ResentRegisterRequest, opts ...grpc.CallOption) (*CommonReply, error) {
+func (c *authClient) ResendRegister(ctx context.Context, in *ResendRegisterRequest, opts ...grpc.CallOption) (*CommonReply, error) {
 	out := new(CommonReply)
-	err := c.cc.Invoke(ctx, Auth_ResentRegister_FullMethodName, in, out, opts...)
+	err := c.cc.Invoke(ctx, Auth_ResendRegister_FullMethodName, in, out, opts...)
 	if err != nil {
 		return nil, err
 	}
@@ -98,7 +98,7 @@ type AuthServer interface {
 	Login(context.Context, *LoginRequest) (*LoginReply, error)
 	ForgetPassword(context.Context, *ForgetPasswordRequest) (*CommonReply, error)
 	ResetPassword(context.Context, *ResetPasswordRequest) (*CommonReply, error)
-	ResentRegister(context.Context, *ResentRegisterRequest) (*CommonReply, error)
+	ResendRegister(context.Context, *ResendRegisterRequest) (*CommonReply, error)
 	mustEmbedUnimplementedAuthServer()
 }
 
@@ -118,8 +118,8 @@ func (UnimplementedAuthServer) ForgetPassword(context.Context, *ForgetPasswordRe
 func (UnimplementedAuthServer) ResetPassword(context.Context, *ResetPasswordRequest) (*CommonReply, error) {
 	return nil, status.Errorf(codes.Unimplemented, "method ResetPassword not implemented")
 }
-func (UnimplementedAuthServer) ResentRegister(context.Context, *ResentRegisterRequest) (*CommonReply, error) {
-	return nil, status.Errorf(codes.Unimplemented, "method ResentRegister not implemented")
+func (UnimplementedAuthServer) ResendRegister(context.Context, *ResendRegisterRequest) (*CommonReply, error) {
+	return nil, status.Errorf(codes.Unimplemented, "method ResendRegister not implemented")
 }
 func (UnimplementedAuthServer) mustEmbedUnimplementedAuthServer() {}
 
@@ -206,20 +206,20 @@ func _Auth_ResetPassword_Handler(srv interface{}, ctx context.Context, dec func(
 	return interceptor(ctx, in, info, handler)
 }
 
-func _Auth_ResentRegister_Handler(srv interface{}, ctx context.Context, dec func(interface{}) error, interceptor grpc.UnaryServerInterceptor) (interface{}, error) {
-	in := new(ResentRegisterRequest)
+func _Auth_ResendRegister_Handler(srv interface{}, ctx context.Context, dec func(interface{}) error, interceptor grpc.UnaryServerInterceptor) (interface{}, error) {
+	in := new(ResendRegisterRequest)
 	if err := dec(in); err != nil {
 		return nil, err
 	}
 	if interceptor == nil {
-		return srv.(AuthServer).ResentRegister(ctx, in)
+		return srv.(AuthServer).ResendRegister(ctx, in)
 	}
 	info := &grpc.UnaryServerInfo{
 		Server:     srv,
-		FullMethod: Auth_ResentRegister_FullMethodName,
+		FullMethod: Auth_ResendRegister_FullMethodName,
 	}
 	handler := func(ctx context.Context, req interface{}) (interface{}, error) {
-		return srv.(AuthServer).ResentRegister(ctx, req.(*ResentRegisterRequest))
+		return srv.(AuthServer).ResendRegister(ctx, req.(*ResendRegisterRequest))
 	}
 	return interceptor(ctx, in, info, handler)
 }
@@ -248,8 +248,8 @@ var Auth_ServiceDesc = grpc.ServiceDesc{
 			Handler:    _Auth_ResetPassword_Handler,
 		},
 		{
-			MethodName: "ResentRegister",
-			Handler:    _Auth_ResentRegister_Handler,
+			MethodName: "ResendRegister",
+			Handler:    _Auth_ResendRegister_Handler,
 		},
 	},
 	Streams:  []grpc.StreamDesc{},
