# auth/api/v1/auth_http.pb.go
@@ -22,14 +22,14 @@ const _ = http.SupportPackageIsVersion1
 const OperationAuthForgetPassword = "/api.v1.Auth/ForgetPassword"
 const OperationAuthLogin = "/api.v1.Auth/Login"
 const OperationAuthRegister = "/api.v1.Auth/Register"
-const OperationAuthResentRegister = "/api.v1.Auth/ResentRegister"
+const OperationAuthResendRegister = "/api.v1.Auth/ResendRegister"
 const OperationAuthResetPassword = "/api.v1.Auth/ResetPassword"
 
 type AuthHTTPServer interface {
 	ForgetPassword(context.Context, *ForgetPasswordRequest) (*CommonReply, error)
 	Login(context.Context, *LoginRequest) (*LoginReply, error)
 	Register(context.Context, *RegisterRequest) (*RegisterReply, error)
-	ResentRegister(context.Context, *ResentRegisterRequest) (*CommonReply, error)
+	ResendRegister(context.Context, *ResendRegisterRequest) (*CommonReply, error)
 	ResetPassword(context.Context, *ResetPasswordRequest) (*CommonReply, error)
 }
 
@@ -39,7 +39,7 @@ func RegisterAuthHTTPServer(s *http.Server, srv AuthHTTPServer) {
 	r.POST("/auth/login", _Auth_Login0_HTTP_Handler(srv))
 	r.POST("/auth/forget_password", _Auth_ForgetPassword0_HTTP_Handler(srv))
 	r.POST("/auth/reset_password", _Auth_ResetPassword0_HTTP_Handler(srv))
-	r.POST("/auth/resent_register", _Auth_ResentRegister0_HTTP_Handler(srv))
+	r.POST("/auth/resend_register", _Auth_ResendRegister0_HTTP_Handler(srv))
 }
 
 func _Auth_Register0_HTTP_Handler(srv AuthHTTPServer) func(ctx http.Context) error {
@@ -118,15 +118,15 @@ func _Auth_ResetPassword0_HTTP_Handler(srv AuthHTTPServer) func(ctx http.Context
 	}
 }
 
-func _Auth_ResentRegister0_HTTP_Handler(srv AuthHTTPServer) func(ctx http.Context) error {
+func _Auth_ResendRegister0_HTTP_Handler(srv AuthHTTPServer) func(ctx http.Context) error {
 	return func(ctx http.Context) error {
-		var in ResentRegisterRequest
+		var in ResendRegisterRequest
 		if err := ctx.Bind(&in); err != nil {
 			return err
 		}
-		http.SetOperation(ctx, OperationAuthResentRegister)
+		http.SetOperation(ctx, OperationAuthResendRegister)
 		h := ctx.Middleware(func(ctx context.Context, req interface{}) (interface{}, error) {
-			return srv.ResentRegister(ctx, req.(*ResentRegisterRequest))
+			return srv.ResendRegister(ctx, req.(*ResendRegisterRequest))
 		})
 		out, err := h(ctx, &in)
 		if err != nil {
@@ -141,7 +141,7 @@ type AuthHTTPClient interface {
 	ForgetPassword(ctx context.Context, req *ForgetPasswordRequest, opts ...http.CallOption) (rsp *CommonReply, err error)
 	Login(ctx context.Context, req *LoginRequest, opts ...http.CallOption) (rsp *LoginReply, err error)
 	Register(ctx context.Context, req *RegisterRequest, opts ...http.CallOption) (rsp *RegisterReply, err error)
-	ResentRegister(ctx context.Context, req *ResentRegisterRequest, opts ...http.CallOption) (rsp *CommonReply, err error)
+	ResendRegister(ctx context.Context, req *ResendRegisterRequest, opts ...http.CallOption) (rsp *CommonReply, err error)
 	ResetPassword(ctx context.Context, req *ResetPasswordRequest, opts ...http.CallOption) (rsp *CommonReply, err error)
 }
 
@@ -192,11 +192,11 @@ func (c *AuthHTTPClientImpl) Register(ctx context.Context, in *RegisterRequest, 
 	return &out, err
 }
 
-func (c *AuthHTTPClientImpl) ResentRegister(ctx context.Context, in *ResentRegisterRequest, opts ...http.CallOption) (*CommonReply, error) {
+func (c *AuthHTTPClientImpl) ResendRegister(ctx context.Context, in *ResendRegisterRequest, opts ...http.CallOption) (*CommonReply, error) {
 	var out CommonReply
-	pattern := "/auth/resent_register"
+	pattern := "/auth/resend_register"
 	path := binding.EncodeURL(pattern, in, false)
-	opts = append(opts, http.Operation(OperationAuthResentRegister))
+	opts = append(opts, http.Operation(OperationAuthResendRegister))
 	opts = append(opts, http.PathTemplate(pattern))
 	err := c.cc.Invoke(ctx, "POST", path, in, &out, opts...)
 	if err != nil {
